--- a/runner-back-end/.env.example
+++ b/runner-back-end/.env.example
@@ -1,7 +1,7 @@
 HOST=localhost
 PORT=3456
 
-APP_NAME=Name Project
+APP_NAME=FinalProject
 APP_URL_API=http://localhost:3456
 APP_URL_CLIENT=http://localhost:5173
 OTHER_URLS_CLIENT=
@@ -11,9 +11,9 @@ REQUESTS_LIMIT_PER_MINUTE=100
 
 DB_HOST=localhost
 DB_PORT=27017
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+DB_USERNAME=minhduy7c
+DB_PASSWORD=duy184205
+DB_NAME=final
 DB_AUTH_SOURCE=admin
 
 MAIL_HOST=smtp.gmail.com
