--- a/runner-back-end/.env.example
+++ b/runner-back-end/.env.example
@@ -5,7 +5,7 @@ APP_NAME=FinalProject
 APP_URL_API=http://localhost:3456
 APP_URL_CLIENT=http://localhost:5173
 OTHER_URLS_CLIENT=
-SECRET_KEY=
+SECRET_KEY=final
 LOGIN_EXPIRE_IN=7d
 REQUESTS_LIMIT_PER_MINUTE=100
 
@@ -19,7 +19,7 @@ DB_AUTH_SOURCE=admin
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_SECURE=false
-MAIL_USERNAME=
+MAIL_USERNAME=thanhnd2k5@gmail.com
 MAIL_PASSWORD=
 MAIL_FROM_ADDRESS=no-reply@gmail.com
 MAIL_FROM_NAME=
