--- a/runner-back-end/.env.example
+++ b/runner-back-end/.env.example
@@ -9,8 +9,8 @@ SECRET_KEY=final
 LOGIN_EXPIRE_IN=7d
 REQUESTS_LIMIT_PER_MINUTE=100
 
-DB_HOST=localhost
-DB_PORT=27017
+DB_HOST=final.1lfkhyu.mongodb.net
+DB_PORT=
 DB_USERNAME=minhduy7c
 DB_PASSWORD=duy184205
 DB_NAME=final
