--- a/runner-back-end/.env.example
+++ b/runner-back-end/.env.example
@@ -4,7 +4,7 @@ PORT=3456
 APP_NAME=FinalProject
 APP_URL_API=http://localhost:3456
 APP_URL_CLIENT=http://localhost:5173
-OTHER_URLS_CLIENT=
+OTHER_URLS_CLIENT=["https://hoppscotch.io"]
 SECRET_KEY=final
 LOGIN_EXPIRE_IN=7d
 REQUESTS_LIMIT_PER_MINUTE=100
