--- a/base-web-umi/package.json
+++ b/base-web-umi/package.json
@@ -64,8 +64,9 @@
     "antd": "4.21.0",
     "antd-img-crop": "^4.2.4",
     "apexcharts": "^3.41.1",
-    "axios": "^0.21.1",
+    "axios": "^1.9.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "fs-extra": "^11.2.0",
     "js-file-download": "^0.4.12",
     "lodash": "^4.17.21",
