--- a/base-web-umi/.env
+++ b/base-web-umi/.env
@@ -40,3 +40,5 @@ APP_CONFIG_TITLE_CORE='Danh mục chung'
 APP_CONFIG_TITLE_CSVC='Cơ sở vật chất'
 APP_CONFIG_TITLE_THU_VIEN='Thư viện'
 APP_CONFIG_TITLE_QLVB='Quản lý văn bản'
+
+APP_CONFIG_API_URL=localhost:3456
