- đăng nhập google - api chỉnh trạng thái đơn xét tuyển - gửi email khi xác nhận đơn

--- a/base-web-umi/package.json
+++ b/base-web-umi/package.json
@@ -55,6 +55,7 @@
     "@ant-design/icons": "~4.5.0",
     "@ant-design/pro-layout": "~6.15.3",
     "@monaco-editor/react": "^4.6.0",
+    "@react-oauth/google": "^0.12.2",
     "@sentry/react": "^7.65.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "@types/lodash.debounce": "^4.0.6",
